KisClipboard: decouple source selection and allow for manual import of single URLs

BUG: 455671